# MNN

./: CMakeLists.txt  MNN.podspec  README.md  README_CN.md  build_mnn.sh
benchmark/: CMakeLists.txt  bench_android.sh  benchmark.cpp  run_net.cpp  string_func.cpp  string_func.h
codegen/: CMakeLists.txt  OpFuse.cpp  OpFuse.hpp  PluginModule.hpp  build.sh
codegen/cpu/: CPUAst.hpp  CPUPluginModule.cpp
codegen/opencl/: OpenCLPluginModule.cpp
codegen/plugin_wrapper/: PluginWrapper.cpp
demo/exec/: CMakeLists.txt  expressDemo.cpp  pictureRecognition.cpp  pictureRotate.cpp  rasterDemo.cpp  segment.cpp  transformerDemo.cpp
demo/iOS/: Podfile  README.md
express/: CMakeLists.txt  Distributions.cpp  Executor.cpp  ExecutorScope.cpp  Expr.cpp  MathOp.cpp  MergeOptimizer.cpp  MergeOptimizer.hpp  NeuralNetWorkOp.cpp  Optimizer.cpp  Utils.cpp  Utils.hpp
express/module/: FixModule.cpp  FixModule.hpp  IfModule.cpp  IfModule.hpp  Module.cpp  NN.cpp  PipelineModule.cpp  PipelineModule.hpp  StaticModule.cpp  StaticModule.hpp  WhileModule.cpp  WhileModule.hpp
include/MNN/: AutoTime.hpp  ImageProcess.hpp  Interpreter.hpp  MNNDefine.h  MNNForwardType.h  Matrix.h  Tensor.hpp
orion_mnn/: CMakeLists.txt  IInference.h  orion_mnn_impl.cpp  orion_mnn_impl.h  print_tensor.h  tensor_convert.cpp  tensor_convert.h  usr_buffer.h
orion_mnn/json/include/nlohmann/: json.hpp
orion_mnn/tools/: CMakeLists.txt  README.md  display_tensor_shape.cpp  mnn_model_generator.py  mnn_walkthrough.py  nhwc2nc4hw4.cpp  orion_mnn_run.cpp  parse_json.h  rewrite_dlcv_json.cpp  run_net.cpp  string_func.cpp  string_func.h
orion_mnn/tools/filesystem/: path.h
package_scripts/linux/: build_lib.sh  build_whl.sh
package_scripts/mac/: build_lib.sh  build_whl.sh
package_scripts/win/: build_bridge.ps1  build_lib.ps1  build_tools.ps1  build_whl.ps1
project/android/: CMakeExports.txt  build_32.sh  build_32_vulkan.sh  build_64.sh  build_vulkan.sh  updateTest.sh
project/cross-compile/: README.md
project/ios/: buildiOS.sh
pymnn/: CMakeLists.txt  update_mnn_wrapper_assets.sh
pymnn/pip_package/: README_Internal.md  build_deps.py  build_manylinux2014.sh  build_wheel.py  setup.py
pymnn/src/: MNN.cc  MNNPyBridge.h  MNNTools.cc  common.h  util.h
release_scripts/: publish2hub.sh  publish2lab.sh
resource/exec/: rasterDemo_transpose.json
schema/current/: BasicOptimizer_generated.h  CaffeOp_generated.h  GpuLibrary_generated.h  MNN_generated.h  TFQuantizeOp_generated.h  Tensor_generated.h  TensorflowOp_generated.h  Type_generated.h  UserDefine_generated.h
schema/default/: BasicOptimizer.fbs  CaffeOp.fbs  GpuLibrary.fbs  MNN.fbs  Tensor.fbs  TensorflowOp.fbs  Type.fbs  UserDefine.fbs
source/core/: AutoStorage.h  Backend.cpp  Backend.hpp  BackendRegister.cpp  BufferAllocator.cpp  BufferAllocator.hpp  Concurrency.h  ConvolutionCommon.cpp  ConvolutionCommon.hpp  DirectedAcyclicGraph.hpp  FileLoader.cpp  FileLoader.hpp  Interpreter.cpp  OpCommonUtils.cpp  OpCommonUtils.hpp  Pipeline.cpp  Pipeline.hpp  Schedule.cpp  Session.cpp  Session.hpp  Tensor.cpp  TensorUtils.hpp  WrapExecution.cpp  WrapExecution.hpp
source/cv/: ImageFloatBlitter.cpp  ImageFloatBlitter.hpp  ImageProcess.cpp  ImageSampler.cpp  ImageSampler.hpp  Matrix_CV.cpp
source/geometry/: ConvertUtils.hpp  GeometryBatchMatMul.cpp  GeometryBinary.cpp  GeometryBroadcastTo.cpp  GeometryComputer.cpp  GeometryComputer.hpp  GeometryComputerUtils.cpp  GeometryComputerUtils.hpp  GeometryConcat.cpp  GeometryConv2D.cpp  GeometryConv2DBackPropFilter.cpp  GeometryConv3D.cpp  GeometryConvUtils.cpp  GeometryConvUtils.hpp  GeometryCosineSimilarity.cpp  GeometryCrop.cpp  GeometryDilation2D.cpp  GeometryELU.cpp  GeometryFill.cpp  GeometryGather.cpp  GeometryImageOp.cpp  GeometryLRN.cpp  GeometryLSTM.cpp  GeometryOPRegister.cpp  GeometryPermute.cpp  GeometryPoolGrad.cpp  GeometryPooling3D.cpp  GeometryReduce.cpp  GeometryReshape.cpp  GeometryReverseSequence.cpp  GeometrySelect.cpp  GeometrySlice.cpp  GeometrySpatialProduct.cpp  GeometryStridedSlice.cpp  GeometryTanH.cpp  GeometryTensorArray.cpp  GeometryTile.cpp
source/shape/: ShapeArgMax.cpp  ShapeBatchMatMul.cpp  ShapeBinaryOp.cpp  ShapeBroadcastTo.cpp  ShapeCast.cpp  ShapeConcat.cpp  ShapeConst.cpp  ShapeConvolution.cpp  ShapeConvolution3D.cpp  ShapeDeconvolution.cpp  ShapeEltwise.cpp  ShapeExpandDims.cpp  ShapeFill.cpp  ShapeGatherND.cpp  ShapeGatherV2.cpp  ShapeGridSample.cpp  ShapeInterp.cpp  ShapeLSTM.cpp  ShapeMatMul.cpp  ShapeNonMaxSuppressionV2.cpp  ShapeOneHot.cpp  ShapePermute.cpp  ShapePool.cpp  ShapePool3D.cpp  ShapeQuantizedAvgPool.cpp  ShapeRange.cpp  (+25 more)
test/: CMakeLists.txt  MNNTestSuite.cpp  MNNTestSuite.h  TestUtils.cpp  TestUtils.h  main.cpp
tools/quantization/: CMakeLists.txt  Helper.cpp  Helper.hpp  TensorStatistic.cpp  TensorStatistic.hpp  calibration.cpp.mnn  calibration.hpp.mnn  calibration_orion.cpp  calibration_orion.hpp  preprocessConfig.json  quantizeWeight.cpp  quantizeWeight.hpp  quantize_speedup.cpp  quantize_speedup.hpp  quantized.cpp
tools/quantization/opttools/: quantized_model_optimize.cpp
(+1311 files in other folders)
