file(GLOB QUANFILES ${CMAKE_CURRENT_LIST_DIR}/*.cpp ${CMAKE_CURRENT_LIST_DIR}/*.hpp)
add_executable(quantized.out ${QUANFILES})
target_link_libraries(quantized.out ${MNN_DEPS})

if(CMAKE_SYSTEM_PROCESSOR MATCHES "(x86_64)|(X86_64)|(x86)|(x64)|(X64)|(amd64)|(AMD64)|(i686)|(i386)")
    if(MSVC)
        target_compile_options(quantized.out PRIVATE /arch:AVX)
    else()
		target_compile_options(quantized.out PRIVATE -msse4.1)
        target_compile_options(quantized.out PRIVATE -mavx2 -mfma)
    endif()
endif()

file(GLOB QUANOPTFILES ${CMAKE_CURRENT_LIST_DIR}/opttools/*)
add_executable(quantized_model_optimize.out ${QUANOPTFILES})
target_link_libraries(quantized_model_optimize.out ${MNN_DEPS})
